k8s/estela/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estela-celery-worker
  namespace: estela
  labels:
    app: estela-celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estela-celery-worker
  template:
    metadata:
      labels:
        app: estela-celery-worker
    spec:
      serviceAccountName: estela-deployer
      containers:
        - name: celery-worker
          image: bitmaker/estela-api:latest
          command:
            - /bin/sh
            - -ce
            - |
              celery -A config worker -l info --concurrency=2
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estela-celery-beat
  namespace: estela
  labels:
    app: estela-celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estela-celery-beat
  template:
    metadata:
      labels:
        app: estela-celery-beat
    spec:
      containers:
        - name: celery-beat
          image: bitmaker/estela-api:latest
          command:
            - /bin/sh
            - -ce
            - |
              celery -A config beat -l info
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
