k8s/estela/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estela-redis
  namespace: estela
  labels:
    app: estela-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estela-redis
  template:
    metadata:
      labels:
        app: estela-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: estela-redis
  namespace: estela
  labels:
    app: estela-redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: estela-redis
