k8s/estela/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estela-ingress
  namespace: estela
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
    - host: estela.aooba.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: estela-api
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: estela-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: estela-web
                port:
                  number: 80
